third_party/move/move-compiler-v2/tests/warnings-are-errors/warning_dependency.exp

Diagnostics:
warning: unused alias
  ┌─ tests/warnings-are-errors/warning_dependency.move:3:21
  │
3 │     use 0x42::test::S0;
  │                     ^^ Unused 'use' of alias 'S0'. Consider removing it

// -- Model dump before bytecode pipeline
module 0x42::dependency {
    use 0x42::test::{S0};
} // end 0x42::dependency
module 0x42::test {
    struct S0 {
        dummy_field: bool,
    }
    struct S1 {
        dummy_field: bool,
    }
    struct S2 {
        f: test::S3<#1>,
    }
    struct S3 {
        dummy_field: bool,
    }
    struct S4 {
        f: vector<#0>,
    }
    struct S5 {
        f: vector<#0>,
        g: vector<#1>,
    }
} // end 0x42::test


============ bytecode verification succeeded ========

Error: Warnings found, and configuration indicates that warnings should be treated as errors
